--- a/app/src/main/res/layout/movie_activity.xml
+++ b/app/src/main/res/layout/movie_activity.xml
@@ -25,6 +25,7 @@
         android:layout_below="@id/movieImage"
         android:layout_marginTop="0dp"
         android:background="#000000"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:paddingStart="10dp"
         android:text="@string/title"
         android:textColor="#FFFFFF"
