--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -24,6 +24,7 @@
         android:layout_below="@id/movieImage"
         android:layout_marginTop="0dp"
         android:background="#000000"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:paddingStart="10dp"
         android:text="@string/title"
         android:textColor="#FFFFFF"
